--- a/style.css
+++ b/style.css
@@ -1,29 +1,45 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
+
 body {
+    min-height: 100vh ;
     display : flex ;
     justify-content:  center ;
+    align-items: center;
     background-color:  hsl(212, 45%, 89%) ;
-        font-family: Outfit ;
-        padding : 20px ;
+    font-family: Outfit ;
+    padding : 20px ;
+
  
 }
 
+.container {
 
+    align-items: center;
+
+}
 
 h2{
-
+  
+    margin: 0.8em 3rem; 
     color : hsl(218, 44%, 22%);
 }
-span{
+p{
  color :   hsl(220, 15%, 55%);
  font-size:  15px;
-text-align: justify ;
+text-align: center ;
+margin: 0.8em 3rem; 
 }
 
 
 .outside-box{
+    align-items: center;
  background-color:  #fff;
  width: 375px ;
- height : 100% ;
+ height : 575px ;
  border-radius: 20px;
  box-shadow:  rgba(149, 157, 165, 0.2) 0px 8px 24px; ;
 
@@ -50,5 +66,5 @@ text-align: justify ;
 
  .textbox {
     text-align: center;
-    margin-bottom:  50px;
+    margin-bottom:  70px;
  } 
